<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="cz.org.drivingformillions.fragments.ChangePassword">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="@dimen/text_margin" android:layout_width="match_parent" android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_current_password"
            android:padding="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/change_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_new_password"
            android:padding="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_current_password">
            <EditText android:id="@+id/change_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_new_password_confirm"
            android:padding="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_new_password">
            <EditText android:id="@+id/change_new_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <Button android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"
            android:id="@+id/update_password"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/update_password"
            android:layout_below="@+id/input_layout_new_password_confirm"
            style="@style/Widget.AppCompat.Button.Colored" />
    </RelativeLayout>

</FrameLayout>
