<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.org.drivingformillions.fragments.ProfileFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:tag="layout/fragment_d4d_profile_0"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="10sp"
                android:id="@+id/textView4"
                android:paddingLeft="@dimen/text_margin"
                android:paddingRight="@dimen/text_margin"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/account_information_label" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/text_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/text_margin"
                            android:layout_marginRight="@dimen/text_margin">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/profile_first_name_edit_text"
                                android:tag="binding_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/first_name_hint" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/profile_last_name_edit_text"
                                android:tag="binding_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/last_name_label" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/profile_email_edit_text"
                                android:tag="binding_3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/email_hint" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <Button
                        android:enabled="true"
                        android:id="@+id/update_profile_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="@dimen/text_margin"
                        android:text="@string/update_profile"
                        style="@style/Widget.AppCompat.Button.Colored" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:textSize="10sp"
                android:paddingLeft="@dimen/text_margin"
                android:paddingRight="@dimen/text_margin"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/plan_information_label" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/text_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/text_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="10">
                        <TextView
                            android:textSize="14sp"
                            android:gravity="right"
                            android:paddingLeft="@dimen/text_margin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Plan status:"
                            android:layout_weight="4.0" />
                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/colorBtnText"
                            android:id="@+id/properties_saved"
                            android:tag="binding_4"
                            android:paddingLeft="@dimen/text_margin"
                            android:paddingRight="@dimen/text_margin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6.0" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/text_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:weightSum="10">
                        <TextView
                            android:textSize="14sp"
                            android:gravity="right"
                            android:paddingLeft="@dimen/text_margin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/properties_remaining_label"
                            android:layout_weight="4.0" />
                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/colorWhite"
                            android:id="@+id/properties_remaining"
                            android:tag="binding_5"
                            android:paddingLeft="@dimen/text_margin"
                            android:paddingRight="@dimen/text_margin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6.0" />
                    </LinearLayout>
                    <Button
                        android:enabled="true"
                        android:id="@+id/open_store_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="@dimen/text_margin"
                        android:text="@string/buy_more_property_requests"
                        style="@style/Widget.AppCompat.Button.Colored" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
